--- a/index.html
+++ b/index.html
@@ -137,12 +137,16 @@
           <div class="flex items-center space-x-4">
             <div class="relative">
               <div class="flex items-center justify-center" >
+                <a href="index.html">
                <img src="assets/images/logo-cropped.png" alt="Swift Shining Path Logo" class="" style="height: 60px; width: 70px;">
+              </a>
               </div>
               <div class="absolute -top-1 -right-1 w-4 h-4 bg-secondary-500 rounded-full animate-pulse"></div>
             </div>
             <div>
+              <a href="index.html">
               <img src="assets/images/logo-text.png" alt="Swift Shining Path Logo" class="h-10">
+              </a>
             </div>
           </div>
 
@@ -193,7 +197,7 @@
             <a href="index.html" class="block text-neutral-700 hover:text-primary-600 font-medium py-2">Home</a>
             <a href="about.html" class="block text-neutral-700 hover:text-primary-600 font-medium py-2">About</a>
             <a href="services.html" class="block text-neutral-700 hover:text-primary-600 font-medium py-2">Solutions</a>
-            <a href="#contact" class="block text-neutral-700 hover:text-primary-600 font-medium py-2">Contact</a>
+            <a href="contact.html" class="block text-primary-600 font-medium py-2">Contact</a>
             <a href="contact.html" class="w-full block text-center bg-gradient-to-r from-[#2E86AB] to-[#0A2342] hover:from-[#F7B32B] hover:to-[#2E86AB] text-white px-6 py-3 rounded-full font-semibold mt-4">
               Get Quote
             </a>
@@ -203,7 +207,7 @@
       </div>
     </div>
 
-    <main>
+    <main class="pt-20">
       <!-- Hero Section -->
       <section id="home" class="relative min-h-screen flex items-center justify-center overflow-hidden">
         <!-- Animated Gradient Background (no carousel) -->
@@ -245,10 +249,7 @@
                 </svg>
               </button>
               <button class="group text-white border-2 border-[#F7B32B] hover:border-[#F7B32B] hover:bg-[#F7B32B] px-8 py-4 rounded-full font-semibold text-lg transition-all duration-300 backdrop-blur-lg">
-                Watch Demo
-                <svg class="inline ml-2 w-5 h-5 transition-transform group-hover:scale-110" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14.828 14.828a4 4 0 01-5.656 0M9 10h1m4 0h1m-6 4h8m-9 4h10a3 3 0 003-3V7a3 3 0 00-3-3H6a3 3 0 00-3 3v8a3 3 0 003 3z"/>
-                </svg>
+              <a href="contact.html"> Contact Us </a>              
               </button>
             </div>
           </div>
@@ -508,7 +509,7 @@
             <div class="group relative bg-white rounded-2xl overflow-hidden shadow-lg hover:shadow-2xl transition-all duration-500 transform hover:-translate-y-2">
               <div class="absolute inset-0 bg-gradient-to-br from-[#2E86AB] to-[#0A2342] opacity-0 group-hover:opacity-95 transition-opacity duration-500"></div>
               <div class="relative h-64 bg-gradient-to-br from-[#C0C5C8] to-[#2E86AB] overflow-hidden">
-                <img src="https://images.unsplash.com/photo-1566478989037-eec170784d0b?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Warehousing" class="w-full h-full object-cover opacity-80" />
+                <img src="https://plus.unsplash.com/premium_photo-1682144862274-384a8f3674ac?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Warehousing" class="w-full h-full object-cover opacity-80" />
                 <div class="absolute inset-0 bg-black/40"></div>
                 <div class="absolute top-4 right-4">
                   <span class="bg-[#F7B32B] text-[#0A2342] text-xs px-3 py-1 rounded-full font-medium">Premium</span>
@@ -608,7 +609,7 @@
             <div class="group relative bg-white rounded-2xl overflow-hidden shadow-lg hover:shadow-2xl transition-all duration-500 transform hover:-translate-y-2">
               <div class="absolute inset-0 bg-gradient-to-br from-[#0A2342] to-[#2E86AB] opacity-0 group-hover:opacity-95 transition-opacity duration-500"></div>
               <div class="relative h-64 bg-gradient-to-br from-[#0A2342] to-[#C0C5C8] overflow-hidden">
-                <img src="https://images.unsplash.com/photo-1494412574643-ff11b0a5c1c3?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Freight Forwarding" class="w-full h-full object-cover opacity-80" />
+                <img src="https://images.unsplash.com/photo-1660477653365-da08afb76379?q=80&w=1074&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" />
                 <div class="absolute inset-0 bg-black/40"></div>
                 <div class="absolute bottom-4 left-4">
                   <div class="w-12 h-12 bg-white/20 backdrop-blur-sm rounded-xl flex items-center justify-center">
