--- a/services.html
+++ b/services.html
@@ -58,12 +58,16 @@
           <div class="flex items-center space-x-4">
             <div class="relative">
               <div class="flex items-center justify-center" >
+                <a href="index.html">
                <img src="assets/images/logo-cropped.png" alt="Swift Shining Path Logo" class="" style="height: 60px; width: 70px;">
+              </a>
               </div>
               <div class="absolute -top-1 -right-1 w-4 h-4 bg-secondary-500 rounded-full animate-pulse"></div>
             </div>
             <div>
+              <a href="index.html">
               <img src="assets/images/logo-text.png" alt="Swift Shining Path Logo" class="h-10">
+              </a>
             </div>
           </div>
 
