--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
             <div class="relative">
               <div class="flex items-center justify-center" >
                 <a href="index.html">
-               <img src="assets/images/logo-cropped.png" alt="Swift Shining Path Logo" class="" style="height: 60px; width: 70px;">
+               <img src="assets/images/logo-cropped.png" alt="Swift Shining Path Logo" class="" style="height: 60px; width: 50px;">
               </a>
               </div>
               <div class="absolute -top-1 -right-1 w-4 h-4 bg-secondary-500 rounded-full animate-pulse"></div>
@@ -155,7 +155,7 @@
                   <div>
                     <h3 class="text-lg font-semibold text-neutral-900 mb-2">Visit Us</h3>
                     <p class="text-neutral-600">B-10, 2nd Floor, NAF Shopping Mall <br>
-                      <p class="text-neutral-600">Airport Road, Ikeja, Lagos</p>
+                      Airport Road, Ikeja, Lagos</p>
                     <p class="text-neutral-600">Your trusted logistics partner</p>
                   </div>
                 </div>
