--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             <div class="relative">
               <div class="flex items-center justify-center" >
                 <a href="index.html">
-               <img src="assets/images/logo-cropped.png" alt="Swift Shining Path Logo" class="" style="height: 60px; width: 70px;">
+               <img src="assets/images/logo-cropped.png" alt="Swift Shining Path Logo" class="" style="height: 60px; width: 50px;">
               </a>
               </div>
               <div class="absolute -top-1 -right-1 w-4 h-4 bg-secondary-500 rounded-full animate-pulse"></div>
@@ -795,7 +795,7 @@
                   </div>
                   <div>
                     <h3 class="text-xl font-semibold mb-2">Call Us</h3>
-                    <p class="text-white/70">+234 XXX XXX XXXX</p>
+                    <p class="text-white/70">+234 803 321 2131   <br> +234 805 569 0922 </p>
                     <p class="text-white/70">Direct line to our logistics experts</p>
                   </div>
                 </div>
