--- a/contact.html
+++ b/contact.html
@@ -75,9 +75,9 @@
               Contact
               <span class="absolute -bottom-1 left-0 w-full h-0.5 bg-primary-600"></span>
             </a>
-            <button class="bg-gradient-to-r from-[#2E86AB] to-[#0A2342] hover:from-[#F7B32B] hover:to-[#2E86AB] text-white px-6 py-3 rounded-full font-semibold transition-all duration-200 transform hover:scale-105 shadow-lg hover:shadow-xl">
+            <a href="contact.html" class="bg-gradient-to-r from-[#2E86AB] to-[#0A2342] hover:from-[#F7B32B] hover:to-[#2E86AB] text-white px-6 py-3 rounded-full font-semibold transition-all duration-200 transform hover:scale-105 shadow-lg hover:shadow-xl inline-block">
               Get Quote
-            </button>
+            </a>
           </div>
 
           <!-- Mobile menu button -->
@@ -105,9 +105,9 @@
             <a href="about.html" class="block text-neutral-700 hover:text-primary-600 font-medium py-2">About</a>
             <a href="services.html" class="block text-neutral-700 hover:text-primary-600 font-medium py-2">Solutions</a>
             <a href="contact.html" class="block text-primary-600 font-medium py-2">Contact</a>
-            <button class="w-full bg-gradient-to-r from-[#2E86AB] to-[#0A2342] hover:from-[#F7B32B] hover:to-[#2E86AB] text-white px-6 py-3 rounded-full font-semibold mt-4">
-              <a href="contact.html">Get Quote</a>
-            </button>
+            <a href="contact.html" class="w-full block text-center bg-gradient-to-r from-[#2E86AB] to-[#0A2342] hover:from-[#F7B32B] hover:to-[#2E86AB] text-white px-6 py-3 rounded-full font-semibold mt-4">
+              Get Quote
+            </a>
           </div>
         </div>
       </div>
@@ -348,12 +348,12 @@
           <div>
             <h4 class="text-lg font-semibold mb-6">Our Solutions</h4>
             <ul class="space-y-3">
-              <li><a href="#" class="text-neutral-400 hover:text-white transition-colors duration-200">Customs Clearing</a></li>
-              <li><a href="#" class="text-neutral-400 hover:text-white transition-colors duration-200">Freight Forwarding</a></li>
-              <li><a href="#" class="text-neutral-400 hover:text-white transition-colors duration-200">Warehousing</a></li>
-              <li><a href="#" class="text-neutral-400 hover:text-white transition-colors duration-200">Logistics Consultancy</a></li>
-              <li><a href="#" class="text-neutral-400 hover:text-white transition-colors duration-200">Cargo Insurance</a></li>
-              <li><a href="#" class="text-neutral-400 hover:text-white transition-colors duration-200">Project Cargo</a></li>
+              <li><a href="services.html" class="text-neutral-400 hover:text-white transition-colors duration-200">Customs Clearing</a></li>
+              <li><a href="services.html" class="text-neutral-400 hover:text-white transition-colors duration-200">Freight Forwarding</a></li>
+              <li><a href="services.html" class="text-neutral-400 hover:text-white transition-colors duration-200">Warehousing</a></li>
+              <li><a href="services.html" class="text-neutral-400 hover:text-white transition-colors duration-200">Logistics Consultancy</a></li>
+              <li><a href="services.html" class="text-neutral-400 hover:text-white transition-colors duration-200">Cargo Insurance</a></li>
+              <li><a href="services.html" class="text-neutral-400 hover:text-white transition-colors duration-200">Project Cargo</a></li>
             </ul>
           </div>
         </div>
@@ -361,9 +361,9 @@
         <div class="border-t border-neutral-800 mt-12 pt-8 flex flex-col md:flex-row justify-between items-center">
           <p class="text-neutral-400 text-sm">&copy; <span id="year"></span> Swift Shining Path Limited. All rights reserved.</p>
           <div class="flex space-x-6 mt-4 md:mt-0">
-            <a href="#" class="text-neutral-400 hover:text-white text-sm transition-colors duration-200">Privacy Policy</a>
-            <a href="#" class="text-neutral-400 hover:text-white text-sm transition-colors duration-200">Terms of Service</a>
-            <a href="#" class="text-neutral-400 hover:text-white text-sm transition-colors duration-200">Cookie Policy</a>
+            <a href="contact.html" class="text-neutral-400 hover:text-white text-sm transition-colors duration-200">Privacy Policy</a>
+            <a href="contact.html" class="text-neutral-400 hover:text-white text-sm transition-colors duration-200">Terms of Service</a>
+            <a href="contact.html" class="text-neutral-400 hover:text-white text-sm transition-colors duration-200">Cookie Policy</a>
           </div>
         </div>
       </div>
