--- a/index.html
+++ b/index.html
@@ -168,9 +168,9 @@
               Contact
               <span class="absolute -bottom-1 left-0 w-0 h-0.5 bg-primary-600 transition-all duration-200 group-hover:w-full"></span>
             </a>
-            <button class="bg-gradient-to-r from-[#2E86AB] to-[#0A2342] hover:from-[#F7B32B] hover:to-[#2E86AB] text-white px-6 py-3 rounded-full font-semibold transition-all duration-200 transform hover:scale-105 shadow-lg hover:shadow-xl">
-              <a href="contact.html">Get Quote</a>
-            </button>
+            <a href="contact.html" class="bg-gradient-to-r from-[#2E86AB] to-[#0A2342] hover:from-[#F7B32B] hover:to-[#2E86AB] text-white px-6 py-3 rounded-full font-semibold transition-all duration-200 transform hover:scale-105 shadow-lg hover:shadow-xl inline-block">
+              Get Quote
+            </a>
           </div>
 
           <!-- Mobile menu button -->
@@ -242,15 +242,17 @@
             </p>
             
             <div class="flex flex-col sm:flex-row gap-6 justify-center items-center">
+             <a href="services.html">
               <button class="group bg-gradient-to-r from-[#2E86AB] to-[#0A2342] hover:from-[#0A2342] hover:to-[#2E86AB] text-white px-8 py-4 rounded-full font-semibold text-lg transition-all duration-300 transform hover:scale-105 shadow-2xl hover:shadow-[#2E86AB]/25 animate-glow">
                 Explore Solutions
                 <svg class="inline ml-2 w-5 h-5 transition-transform group-hover:translate-x-1" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3"/>
                 </svg>
               </button>
-              <button class="group text-white border-2 border-[#F7B32B] hover:border-[#F7B32B] hover:bg-[#F7B32B] px-8 py-4 rounded-full font-semibold text-lg transition-all duration-300 backdrop-blur-lg">
-              <a href="contact.html"> Contact Us </a>              
-              </button>
+            </a>
+              <a href="contact.html" class="group text-white border-2 border-[#F7B32B] hover:border-[#F7B32B] hover:bg-[#F7B32B] px-8 py-4 rounded-full font-semibold text-lg transition-all duration-300 backdrop-blur-lg inline-block">
+                Contact Us
+              </a>
             </div>
           </div>
         </div>
@@ -640,12 +642,14 @@
           </div>
 
           <div class="text-center mt-16">
+            <a href="services.html">
             <button class="bg-gradient-to-r from-[#2E86AB] to-[#0A2342] hover:from-[#F7B32B] hover:to-[#2E86AB] text-white px-8 py-4 rounded-full font-semibold text-lg transition-all duration-300 transform hover:scale-105 shadow-lg hover:shadow-xl">
               View All Solutions
               <svg class="inline ml-2 w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3"/>
               </svg>
             </button>
+            </a>
           </div>
         </div>
       </section>
@@ -665,12 +669,14 @@
           </div>
 
           <div class="text-center mt-16">
+            <a href="services.html">
             <button class="bg-gradient-to-r from-[#2E86AB] to-[#0A2342] hover:from-[#F7B32B] hover:to-[#2E86AB] text-white px-8 py-4 rounded-full font-semibold text-lg transition-all duration-300 transform hover:scale-105 shadow-lg hover:shadow-xl">
               View Solutions
               <svg class="inline ml-2 w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3"/>
               </svg>
             </button>
+          </a>
           </div>
 
 
@@ -885,12 +891,12 @@
           <div>
             <h4 class="text-lg font-semibold mb-6">Our Solutions</h4>
             <ul class="space-y-3">
-              <li><a href="#" class="text-neutral-400 hover:text-white transition-colors duration-200">Customs Clearing</a></li>
-              <li><a href="#" class="text-neutral-400 hover:text-white transition-colors duration-200">Freight Forwarding</a></li>
-              <li><a href="#" class="text-neutral-400 hover:text-white transition-colors duration-200">Warehousing</a></li>
-              <li><a href="#" class="text-neutral-400 hover:text-white transition-colors duration-200">Logistics Consultancy</a></li>
-              <li><a href="#" class="text-neutral-400 hover:text-white transition-colors duration-200">Cargo Insurance</a></li>
-              <li><a href="#" class="text-neutral-400 hover:text-white transition-colors duration-200">Project Cargo</a></li>
+              <li><a href="services.html" class="text-neutral-400 hover:text-white transition-colors duration-200">Customs Clearing</a></li>
+              <li><a href="services.html" class="text-neutral-400 hover:text-white transition-colors duration-200">Freight Forwarding</a></li>
+              <li><a href="services.html" class="text-neutral-400 hover:text-white transition-colors duration-200">Warehousing</a></li>
+              <li><a href="services.html" class="text-neutral-400 hover:text-white transition-colors duration-200">Logistics Consultancy</a></li>
+              <li><a href="services.html" class="text-neutral-400 hover:text-white transition-colors duration-200">Cargo Insurance</a></li>
+              <li><a href="services.html" class="text-neutral-400 hover:text-white transition-colors duration-200">Project Cargo</a></li>
             </ul>
           </div>
         </div>
@@ -898,9 +904,9 @@
         <div class="border-t border-neutral-800 mt-12 pt-8 flex flex-col md:flex-row justify-between items-center">
           <p class="text-neutral-400 text-sm">&copy; <span id="year"></span> Swift Shining Path Limited. All rights reserved.</p>
           <div class="flex space-x-6 mt-4 md:mt-0">
-            <a href="#" class="text-neutral-400 hover:text-white text-sm transition-colors duration-200">Privacy Policy</a>
-            <a href="#" class="text-neutral-400 hover:text-white text-sm transition-colors duration-200">Terms of Service</a>
-            <a href="#" class="text-neutral-400 hover:text-white text-sm transition-colors duration-200">Cookie Policy</a>
+            <a href="contact.html" class="text-neutral-400 hover:text-white text-sm transition-colors duration-200">Privacy Policy</a>
+            <a href="contact.html" class="text-neutral-400 hover:text-white text-sm transition-colors duration-200">Terms of Service</a>
+            <a href="contact.html" class="text-neutral-400 hover:text-white text-sm transition-colors duration-200">Cookie Policy</a>
           </div>
         </div>
       </div>
