--- a/services.html
+++ b/services.html
@@ -59,7 +59,7 @@
             <div class="relative">
               <div class="flex items-center justify-center" >
                 <a href="index.html">
-               <img src="assets/images/logo-cropped.png" alt="Swift Shining Path Logo" class="" style="height: 60px; width: 70px;">
+               <img src="assets/images/logo-cropped.png" alt="Swift Shining Path Logo" class="" style="height: 60px; width: 50px;">
               </a>
               </div>
               <div class="absolute -top-1 -right-1 w-4 h-4 bg-secondary-500 rounded-full animate-pulse"></div>
@@ -89,9 +89,9 @@
               Contact
               <span class="absolute -bottom-1 left-0 w-0 h-0.5 bg-primary-600 transition-all duration-200 group-hover:w-full"></span>
             </a>
-            <button class="bg-gradient-to-r from-[#2E86AB] to-[#0A2342] hover:from-[#F7B32B] hover:to-[#2E86AB] text-white px-6 py-3 rounded-full font-semibold transition-all duration-200 transform hover:scale-105 shadow-lg hover:shadow-xl">
-             <a href="contact.html">Get Quote</a>
-            </button>
+            <a href="contact.html" class="bg-gradient-to-r from-[#2E86AB] to-[#0A2342] hover:from-[#F7B32B] hover:to-[#2E86AB] text-white px-6 py-3 rounded-full font-semibold transition-all duration-200 transform hover:scale-105 shadow-lg hover:shadow-xl inline-block">
+              Get Quote
+            </a>
           </div>
 
           <!-- Mobile menu button -->
@@ -119,9 +119,9 @@
             <a href="about.html" class="block text-neutral-700 hover:text-primary-600 font-medium py-2">About</a>
             <a href="services.html" class="block text-primary-600 font-medium py-2">Solutions</a>
             <a href="contact.html" class="block text-neutral-700 hover:text-primary-600 font-medium py-2">Contact</a>
-            <button class="w-full bg-gradient-to-r from-[#2E86AB] to-[#0A2342] hover:from-[#F7B32B] hover:to-[#2E86AB] text-white px-6 py-3 rounded-full font-semibold mt-4">
+            <a href="contact.html" class="w-full block text-center bg-gradient-to-r from-[#2E86AB] to-[#0A2342] hover:from-[#F7B32B] hover:to-[#2E86AB] text-white px-6 py-3 rounded-full font-semibold mt-4">
               Get Quote
-            </button>
+            </a>
           </div>
         </div>
       </div>
@@ -157,7 +157,7 @@
               </div>
               <h3 class="text-xl font-bold text-neutral-900 mb-4">Customs Clearing & Brokerage</h3>
               <p class="text-neutral-600 mb-4">Swift and accurate customs declarations, duty calculations, and compliance with all import/export regulations. Our expert team navigates complex customs procedures.</p>
-              <a href="#" class="inline-flex items-center text-primary-600 hover:text-primary-700 font-medium group-hover:translate-x-1 transition-transform">
+              <a href="contact.html" class="inline-flex items-center text-primary-600 hover:text-primary-700 font-medium group-hover:translate-x-1 transition-transform">
                 Learn more
                 <svg class="ml-1 w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"/>
@@ -174,7 +174,7 @@
               </div>
               <h3 class="text-xl font-bold text-neutral-900 mb-4">Freight Forwarding</h3>
               <p class="text-neutral-600 mb-4">Complete transportation management by air, sea, or land. Includes cargo booking, consolidation, documentation, tracking, and delivery optimization.</p>
-              <a href="#" class="inline-flex items-center text-primary-600 hover:text-primary-700 font-medium group-hover:translate-x-1 transition-transform">
+              <a href="contact.html" class="inline-flex items-center text-primary-600 hover:text-primary-700 font-medium group-hover:translate-x-1 transition-transform">
                 Learn more
                 <svg class="ml-1 w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"/>
@@ -191,7 +191,7 @@
               </div>
               <h3 class="text-xl font-bold text-neutral-900 mb-4">Warehousing & Storage</h3>
               <p class="text-neutral-600 mb-4">Secure and flexible warehousing options for both short-term and long-term storage, including inventory management and distribution solutions.</p>
-              <a href="#" class="inline-flex items-center text-primary-600 hover:text-primary-700 font-medium group-hover:translate-x-1 transition-transform">
+              <a href="contact.html" class="inline-flex items-center text-primary-600 hover:text-primary-700 font-medium group-hover:translate-x-1 transition-transform">
                 Learn more
                 <svg class="ml-1 w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"/>
@@ -208,7 +208,7 @@
               </div>
               <h3 class="text-xl font-bold text-neutral-900 mb-4">Logistics Consultancy</h3>
               <p class="text-neutral-600 mb-4">Expert advice on international trade regulations, supply chain optimization, and risk management to enhance your business operations.</p>
-              <a href="#" class="inline-flex items-center text-primary-600 hover:text-primary-700 font-medium group-hover:translate-x-1 transition-transform">
+              <a href="contact.html" class="inline-flex items-center text-primary-600 hover:text-primary-700 font-medium group-hover:translate-x-1 transition-transform">
                 Learn more
                 <svg class="ml-1 w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"/>
@@ -225,7 +225,7 @@
               </div>
               <h3 class="text-xl font-bold text-neutral-900 mb-4">Cargo Insurance</h3>
               <p class="text-neutral-600 mb-4">Comprehensive cargo insurance options to protect your goods against unforeseen circumstances during transit, offering peace of mind.</p>
-              <a href="#" class="inline-flex items-center text-primary-600 hover:text-primary-700 font-medium group-hover:translate-x-1 transition-transform">
+              <a href="contact.html" class="inline-flex items-center text-primary-600 hover:text-primary-700 font-medium group-hover:translate-x-1 transition-transform">
                 Learn more
                 <svg class="ml-1 w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"/>
@@ -242,7 +242,7 @@
               </div>
               <h3 class="text-xl font-bold text-neutral-900 mb-4">Project Cargo Handling</h3>
               <p class="text-neutral-600 mb-4">Expertise in managing oversized, heavy, or complex project cargo with specialized equipment and route planning coordination.</p>
-              <a href="#" class="inline-flex items-center text-primary-600 hover:text-primary-700 font-medium group-hover:translate-x-1 transition-transform">
+              <a href="contact.html" class="inline-flex items-center text-primary-600 hover:text-primary-700 font-medium group-hover:translate-x-1 transition-transform">
                 Learn more
                 <svg class="ml-1 w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"/>
@@ -252,12 +252,12 @@
         </div>
 
         <div class="text-center mt-16">
-          <button class="bg-gradient-to-r from-[#2E86AB] to-[#0A2342] hover:from-[#F7B32B] hover:to-[#2E86AB] text-white px-8 py-4 rounded-full font-semibold text-lg transition-all duration-300 transform hover:scale-105 shadow-lg hover:shadow-xl">
+          <a href="contact.html" class="bg-gradient-to-r from-[#2E86AB] to-[#0A2342] hover:from-[#F7B32B] hover:to-[#2E86AB] text-white px-8 py-4 rounded-full font-semibold text-lg transition-all duration-300 transform hover:scale-105 shadow-lg hover:shadow-xl inline-block">
             Get in Touch
             <svg class="inline ml-2 w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3"/>
             </svg>
-          </button>
+          </a>
         </div>
 
       </section>
@@ -310,12 +310,12 @@
           <div>
             <h4 class="text-lg font-semibold mb-6">Our Solutions</h4>
             <ul class="space-y-3">
-              <li><a href="#" class="text-neutral-400 hover:text-white transition-colors duration-200">Customs Clearing</a></li>
-              <li><a href="#" class="text-neutral-400 hover:text-white transition-colors duration-200">Freight Forwarding</a></li>
-              <li><a href="#" class="text-neutral-400 hover:text-white transition-colors duration-200">Warehousing</a></li>
-              <li><a href="#" class="text-neutral-400 hover:text-white transition-colors duration-200">Logistics Consultancy</a></li>
-              <li><a href="#" class="text-neutral-400 hover:text-white transition-colors duration-200">Cargo Insurance</a></li>
-              <li><a href="#" class="text-neutral-400 hover:text-white transition-colors duration-200">Project Cargo</a></li>
+              <li><a href="services.html" class="text-neutral-400 hover:text-white transition-colors duration-200">Customs Clearing</a></li>
+              <li><a href="services.html" class="text-neutral-400 hover:text-white transition-colors duration-200">Freight Forwarding</a></li>
+              <li><a href="services.html" class="text-neutral-400 hover:text-white transition-colors duration-200">Warehousing</a></li>
+              <li><a href="services.html" class="text-neutral-400 hover:text-white transition-colors duration-200">Logistics Consultancy</a></li>
+              <li><a href="services.html" class="text-neutral-400 hover:text-white transition-colors duration-200">Cargo Insurance</a></li>
+              <li><a href="services.html" class="text-neutral-400 hover:text-white transition-colors duration-200">Project Cargo</a></li>
             </ul>
           </div>
         </div>
@@ -323,9 +323,9 @@
         <div class="border-t border-neutral-800 mt-12 pt-8 flex flex-col md:flex-row justify-between items-center">
           <p class="text-neutral-400 text-sm">&copy; <span id="year"></span> Swift Shining Path Limited. All rights reserved.</p>
           <div class="flex space-x-6 mt-4 md:mt-0">
-            <a href="#" class="text-neutral-400 hover:text-white text-sm transition-colors duration-200">Privacy Policy</a>
-            <a href="#" class="text-neutral-400 hover:text-white text-sm transition-colors duration-200">Terms of Service</a>
-            <a href="#" class="text-neutral-400 hover:text-white text-sm transition-colors duration-200">Cookie Policy</a>
+            <a href="contact.html" class="text-neutral-400 hover:text-white text-sm transition-colors duration-200">Privacy Policy</a>
+            <a href="contact.html" class="text-neutral-400 hover:text-white text-sm transition-colors duration-200">Terms of Service</a>
+            <a href="contact.html" class="text-neutral-400 hover:text-white text-sm transition-colors duration-200">Cookie Policy</a>
           </div>
         </div>
       </div>
